<resources>
    <string name="app_name">Tesis_ECG</string>
    <string name="title_activity_login">Iniciar Sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="error_invalid_email">El usuario es inválido</string>
    <string name="error_invalid_password">La contraseña es inválida</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Esta información es necesaria</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Strings related to sign up -->
    <string name="sign_up_title">Crea tu cuenta</string>
    <string name="prompt_name">Nombre Completo</string>
    <string name="prompt_age">Edad</string>
    <string name="prompt_sex">Sexo</string>
    <string name="prompt_phone_number">Número de teléfono</string>
    <string name="action_sign_up">Registrarse</string>

    <!-- Strings related to drawer -->
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>
