<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/gradient_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/gradient">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_image_view"
            android:backgroundTint="#fff"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="80dp"
            android:orientation="vertical">


        </RelativeLayout>



    </LinearLayout>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gradient_background"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="-60dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >



            <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">


                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_title"
                        android:textAllCaps="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"/>



                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >

                        <AutoCompleteTextView
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_name"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="16sp"
                            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                            android:background="@drawable/rounded_text_view"


                            />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            >

                            <AutoCompleteTextView
                                android:id="@+id/age"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_age"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textSize="16sp"
                                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                                android:background="@drawable/rounded_text_view"


                                />

                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            >

                            <AutoCompleteTextView
                                android:id="@+id/sex"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_sex"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textSize="16sp"
                                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                                android:background="@drawable/rounded_text_view"


                                />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >

                        <EditText
                            android:id="@+id/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="phone"
                            android:hint="@string/prompt_phone_number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="16sp"
                            android:drawableLeft="@drawable/ic_phone_black_24dp"
                            android:background="@drawable/rounded_text_view"/>



                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >

                        <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="16sp"
                            android:drawableLeft="@drawable/ic_email_black_24dp"
                            android:background="@drawable/rounded_text_view"


                            />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textSize="16sp"
                            android:singleLine="true"
                            android:drawableLeft="@drawable/ic_lock_black_24dp"
                            android:background="@drawable/rounded_text_view"/>

                    </android.support.design.widget.TextInputLayout>







                    <Button
                        android:id="@+id/email_sign_up_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_border"
                        android:backgroundTint="@color/colorPrimary"
                        android:shadowColor="@color/colorAccent"
                        android:text="@string/action_sign_up"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:elevation="58dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="¿Ya tienes cuenta?"
                            android:textSize="16sp"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Inicia Sesión"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold"
                            android:textAllCaps="false"
                            android:backgroundTint="#fff"
                            style="@style/Base.Widget.AppCompat.Button.Borderless"/>
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </android.support.v7.widget.CardView>




</RelativeLayout>